data/all_generated_tests/raw_wast_tests/call_EdgeCaseFailuresinbr_table_3802.wast
;; 1. **Test with Excessive Argument Stack Count**:    - **Description**: Create a function call with a `br_table` instruction that has more arguments on the stack than required by the target function.    - **Constraint Checked**: Argument stack count validation.    - **Edge Case Relation**: Ensures proper handling when argument count exceeds function requirements, triggering a potential failure due to mismanaged stack state.

(assert_invalid
  (module
    (type (func (param i32)))
    (func $excessive-args
      (call 0 (i32.const 1) (i32.const 2))
    )
    (func (param i32))
  )
  "type mismatch"
)